--- a/hw/templates/hw_detail.html
+++ b/hw/templates/hw_detail.html
@@ -171,9 +171,6 @@
                     </div>
                     <input class="btn btn-primary float-right" type="submit" value="제출">
                 </form>
-
-
-
                 {% endif %}
             </div>
         </div>
@@ -237,7 +234,7 @@
     </div>
     {% endif %} -->
 
-    <div class="footer bg-dark">
-        <div class="text-light">&copy; MJU X LIKELION 8th | All rights reserved. </div>
+    <div id="copyright" class="footer bg-dark">
+        <p>&copy; MJU X LIKELION 8th | All rights reserved.</p>
     </div>
     {% endblock %}
