--- a/hw/templates/hw_main.html
+++ b/hw/templates/hw_main.html
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <div id="copyright">
+    <div id="copyright" class="footer bg-dark">
         <p>&copy; MJU X LIKELION 8th | All rights reserved. </p>
     </div>
 </body>
