--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -118,7 +118,7 @@
                     <h3>과제 제출</h3>
                     <p class="content">꾸준한 연습이 완벽을 만듭니다.</p>
                     <ul class="actions special">
-                        <li><a href="{% url 'homeworklist' %}" class="button">More</a></li>
+                        <li><a href="{% url 'hw_main' %}" class="button">More</a></li>
                     </ul>
                 </div>
                 <div class="col-4 col-12-medium">
