Fixed Footer Layout in 'hwmanage' app

--- a/hwmanage/templates/hw_manage_index.html
+++ b/hwmanage/templates/hw_manage_index.html
@@ -40,7 +40,7 @@
             </tbody>
         </table>
     </main>
-    <div class="footer bg-dark">
-        <div class="text-light">&copy; MJU X LIKELION 8th | All rights reserved.</div>
+    <div id="copyright" class="footer bg-dark">
+        <p>&copy; MJU X LIKELION 8th | All rights reserved.</p>
     </div>
 {% endblock %}
