--- a/hwmanage/static/hwmanage/css/default.css
+++ b/hwmanage/static/hwmanage/css/default.css
@@ -19,3 +19,27 @@
 .table-row-link{
     cursor: pointer;
 }
+
+/*-- Footer --*/
+
+#copyright
+{
+    overflow: hidden;
+    padding: 5em 0em;
+    border-top: 1px solid rgba(0,0,0,0.08);
+}
+
+#copyright p
+{
+    letter-spacing: 0.20em;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.90em;
+    color: rgba(255,255,255,0.3);
+}
+
+#copyright a
+{
+    text-decoration: none;
+    color: rgba(255,255,255,0.5);
+}
