--- a/hwmanage/templates/hw_manage_detail.html
+++ b/hwmanage/templates/hw_manage_detail.html
@@ -47,7 +47,7 @@
         </div>
 
     </main>
-    <div class="footer bg-dark">
-        <div class="text-light">&copy; MJU X LIKELION 8th | All rights reserved.</div>
+    <div id="copyright" class="footer bg-dark">
+        <p>&copy; MJU X LIKELION 8th | All rights reserved.</p>
     </div>
 {% endblock %}
