form control class added

--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -26,7 +26,7 @@
             console.log(files);
             $('#div_files' + id).html(inner_div_files);
 
-            $('#question_content' + id).replaceWith('<textarea name="revise" id="textarea' + id + '">' +
+            $('#question_content' + id).replaceWith('<textarea class="form-control" name="revise" id="textarea' + id + '">' +
                 content + '</textarea>');
             $('#buttonpanel' + id).html('<button type="button" id="' + id +
                 '" class="button cancel" value="취소">취소</button>\n' +
