--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -98,7 +98,7 @@
                                 <div class="QuestionFiles">
                                     <a class="question_file{{ question.id }}" id="{{ qfile.id }}"
                                        href="{{ qfile.file.url }}" style="font-weight: 100;"
-                                       download="" value=""><span class="icon solid fas fa-file">{{ qfile.file }}</span></a>
+                                       download="" value=""><span class="icon solid fas fa-file">{{ qfile.fileName }}</span></a>
                                 </div>
                             {% endfor %}
                         </div>
