Changed Image Files Name in 'introduce.html'

--- a/page/templates/introduce.html
+++ b/page/templates/introduce.html
@@ -37,14 +37,14 @@
             <section class="thumbnails">
 
                 <div>
-                    <a href="{% static 'page/images/thumbs/김만수.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/김만수.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/mansoo.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/mansoo.jpg' %}" alt="" />
                         <h3>김만수 (만파카)</h3>
                         <p>응용소프트웨어 18</p>
                         <h5>사실은 경영대학 학생임</h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/노혜인.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/노혜인.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/hyein.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/hyein.jpg' %}" alt="" />
                         <h3>노혜인 (YES혜인)</h3>
                         <p>경영정보학과 18 <br>
                             (RPA 복수전공)
@@ -56,14 +56,14 @@
                 </div>
 
                 <div>
-                    <a href="{% static 'page/images/thumbs/김나연.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/김나연.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/nayeon.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/nayeon.jpg' %}" alt="" />
                         <h3>김나연 (클로이KKK)</h3>
                         <p>응용소프트웨어 17</p>
                         <h5>노는 게 제일 좋아 !</h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/최윤식.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/최윤식.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/yoonsik.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/yoonsik.jpg' %}" alt="" />
                         <h3>최윤식 (또치)</h3>
                         <p>응용소프트웨어 16</p>
                         <h5>안녕하세요. 명지대 이종석입니다.</h5>
@@ -71,15 +71,15 @@
                 </div>
 
                 <div>
-                    <a href="{% static 'page/images/thumbs/김민지.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/김민지.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/minzi.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/minzi.jpg' %}" alt="" />
                         <h3>김민지 (백두산호랑이)</h3>
                         <p>경영학과 18 <br>
                             (경영정보/RPA 복수전공)</p>
                         <h5>백두산 정기를 받아 싸우자 ! 이기자 !</h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/한준혁.jpeg' %}">
-                        <img src="{% static 'page/images/thumbs/한준혁.jpeg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/joonhyuk.jpeg' %}">
+                        <img src="{% static 'page/images/thumbs/joonhyuk.jpeg' %}" alt="" />
                         <h3>한준혁 (해롱이)</h3>
                         <p>경영학과 15 <br>
                             (RPA 복수전공)
@@ -89,8 +89,8 @@
                 </div>
 
                 <div>
-                    <a href="{% static 'page/images/thumbs/김지현.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/김지현.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/jihyun.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/jihyun.jpg' %}" alt="" />
                         <h3>김지현 (집순이)</h3>
                         <p>데이터테크놀로지 18</p>
                         <h5>집에 갈래.....🙂</h5>
@@ -106,20 +106,20 @@
             <section class="thumbnails">
 
                 <div>
-                    <a href="{% static 'page/images/thumbs/곽민아.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/곽민아.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/mina.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/mina.jpg' %}" alt="" />
                         <h3>곽민아 (미나리)</h3>
                         <p>경영정보학과 18</p>
                         <h5>귀여운 게 최고야!</h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/김유비.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/김유비.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/yubi.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/yubi.jpg' %}" alt="" />
                         <h3>김유비 (유빕)</h3>
                         <p>응용소프트웨어 20</p>
                         <h5>안녕하세요! 김유비입니다.</h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/이소윤.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/이소윤.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/soyoon.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/soyoon.jpg' %}" alt="" />
                         <h3>이소윤 (소따뚜이)</h3>
                         <p>경영학과 18 <br>
                             (경영정보 복수전공)
@@ -129,22 +129,22 @@
                 </div>
 
                 <div>
-                    <a href="{% static 'page/images/thumbs/곽진아.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/곽진아.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/jina.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/jina.jpg' %}" alt="" />
                         <h3>곽진아 (찐아)</h3>
                         <p>정보통신공학과 16</p>
                         <h5>긍정적이고 재미있게 살기😃</h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/김예빈.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/김예빈.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/yebin.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/yebin.jpg' %}" alt="" />
                         <h3>김예빈 (열정 만수르)</h3>
                         <p>미술사학과 19<br>
                             (경영정보 복수전공)
                         </p>
                         <h5>인간에게 가장 해로운 벌레는 대충</h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/정가현.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/정가현.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/gahyeon.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/gahyeon.jpg' %}" alt="" />
                         <h3>정가현 (디즈니덕후)</h3>
                         <p>숭실대 전자정보공학부 18</p>
                         <h5>하고 싶은 건 다 하고 살거야 👸</h5>
@@ -152,21 +152,21 @@
                 </div>
 
                 <div>
-                    <a href="{% static 'page/images/thumbs/김도영.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/김도영.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/doyoung.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/doyoung.jpg' %}" alt="" />
                         <h3>김도영 (도여미)</h3>
                         <p>응용소프트웨어 19</p>
                         <h5>다음 생에는 돌로 태어나 <br>
                             아무것도 안 하고 싶다. </h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/김현빈.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/김현빈.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/hyunbin.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/hyunbin.jpg' %}" alt="" />
                         <h3>김현빈 (포비)</h3>
                         <p>미술사학과 20</p>
                         <h5>☆코딩 병아리☆</h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/조환희.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/조환희.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/hwanhee.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/hwanhee.jpg' %}" alt="" />
                         <h3>조환희 (조퍼니)</h3>
                         <p>사회과학부 20</p>
                         <h5>누가 뭐라해도 나는 조퍼니.</h5>
@@ -174,14 +174,14 @@
                 </div>
 
                 <div>
-                    <a href="{% static 'page/images/thumbs/김승현.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/김승현.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/seunghyun.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/seunghyun.jpg' %}" alt="" />
                         <h3>김승현 (에디)</h3>
                         <p>데이터테크놀로지 17</p>
                         <h5>장고는 처음이라서... 😶</h5>
                     </a>
-                    <a href="{% static 'page/images/thumbs/박성제.jpg' %}">
-                        <img src="{% static 'page/images/thumbs/박성제.jpg' %}" alt="" />
+                    <a href="{% static 'page/images/thumbs/sungje.jpg' %}">
+                        <img src="{% static 'page/images/thumbs/sungje.jpg' %}" alt="" />
                         <h3>박성제 (AiRini)</h3>
                         <p>응용소프트웨어 18</p>
                         <h5>현금술사</h5>
